declaring use of angular

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="tic-tac-toe">
     <head lang="en">
         <meta charset="utf-8">
         <title>tic-tac-toe</title>
+        <script src="bower_components/angularjs/angular.min.js"></script>
     </head>
     <body>
     </body>
