--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
         <meta charset="utf-8">
         <title>tic-tac-toe</title>
         <script src="bower_components/angular/angular.min.js"></script>
+        <script src="bower_components/jquery/dist/jquery.min.js"></script>
+        <script src="bower_components/ng-grid/ng-grid-2.0.14.min.js"></script>
+        <script src="tictactoe.js"></script>
+        <link rel="style" type="text/css" href="bower_components/ng-grid/ng-grid.min.css">
     </head>
     <body>
+        <div>
+        </div>
     </body>
 </html>
