--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
         <script src="bower_components/ng-grid/ng-grid-2.0.14.min.js"></script>
         <script src="tictactoe.js"></script>
         <link rel="style" type="text/css" href="bower_components/ng-grid/ng-grid.min.css">
+        <link rel="style" type="text/css" href="tictactoe.css">
     </head>
-    <body>
-        <div>
+    <body ng-controller="GameCtrl">
+        <div class="gridStyle" ng-grid="gridOptions">
         </div>
     </body>
 </html>
