using custom directive

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
         <script src="bower_components/angular/angular.min.js"></script>
         <script src="tictactoe.js"></script>
     </head>
-    <body ng-controller="GameCtrl">
-        <div class="gridStyle" ng-grid="gridOptions">
-        </div>
+    <body>
+        <tic-tac-toe />
     </body>
 </html>
