ensures proper cell height when grid is empty.

--- a/board.html
+++ b/board.html
@@ -11,7 +11,8 @@
     #cell8 { border-bottom: none; border-right: none; }
     html { background-color: #ffffff; }
     table { background-color: #000000; border-collapse: collapse; }
-    td { border: solid #000000; background-color: #ffffff; width: 1.0em; text-align: center; }
+    td { border: solid #000000; background-color: #ffffff; width: 1.0em; height: 1.0em; 
+        text-align: center; }
     .winner { background-color: lightgreen; }
     .draw { background-color: yellow; }
     </style>
