specify which grid clicked on

--- a/board.html
+++ b/board.html
@@ -18,19 +18,19 @@
     </style>
     <table>
         <tr class="row1">
-            <td ng-bind="coords[0]" ng-click="move()" id="cell0">&nbsp;</td>
-            <td ng-bind="coords[1]" ng-click="move()" id="cell1">&nbsp;</td>
-            <td ng-bind="coords[2]" ng-click="move()" id="cell2">&nbsp;</td>
+            <td ng-bind="coords[0]" ng-click="move(0)" id="cell0">&nbsp;</td>
+            <td ng-bind="coords[1]" ng-click="move(1)" id="cell1">&nbsp;</td>
+            <td ng-bind="coords[2]" ng-click="move(2)" id="cell2">&nbsp;</td>
         </tr>
         <tr class="row2">
-            <td ng-bind="coords[3]" ng-click="move()" id="cell3">&nbsp;</td>
-            <td ng-bind="coords[4]" ng-click="move()" id="cell4">&nbsp;</td>
-            <td ng-bind="coords[5]" ng-click="move()" id="cell5">&nbsp;</td>
+            <td ng-bind="coords[3]" ng-click="move(3)" id="cell3">&nbsp;</td>
+            <td ng-bind="coords[4]" ng-click="move(4)" id="cell4">&nbsp;</td>
+            <td ng-bind="coords[5]" ng-click="move(5)" id="cell5">&nbsp;</td>
         </tr>
         <tr class="row3">
-            <td ng-bind="coords[6]" ng-click="move()" id="cell6">&nbsp;</td>
-            <td ng-bind="coords[7]" ng-click="move()" id="cell7">&nbsp;</td>
-            <td ng-bind="coords[8]" ng-click="move()" id="cell8">&nbsp;</td>
+            <td ng-bind="coords[6]" ng-click="move(6)" id="cell6">&nbsp;</td>
+            <td ng-bind="coords[7]" ng-click="move(7)" id="cell7">&nbsp;</td>
+            <td ng-bind="coords[8]" ng-click="move(8)" id="cell8">&nbsp;</td>
         </tr>
     </table>
     <p ng-bind="gameStatus" />
