changed name of var

--- a/board.html
+++ b/board.html
@@ -33,5 +33,5 @@
             <td ng-bind="coords[8]" ng-click="move(8)" id="cell8">&nbsp;</td>
         </tr>
     </table>
-    <p ng-bind="gameStatus" />
+    <p ng-bind="status" />
 </div>
