--- a/board.html
+++ b/board.html
@@ -9,7 +9,7 @@
     #cell6 { border-left: none; border-bottom: none; }
     #cell7 { border-bottom: none; }
     #cell8 { border-bottom: none; border-right: none; }
-    html { background-color: #ffffff; }
+    body { background-color: #ffffff; }
     table { background-color: #000000; border-collapse: collapse; }
     td { border: solid #000000; background-color: #ffffff; width: 1.0em; height: 1.0em; 
         text-align: center; }
