mocked up: searching for a game.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
         <script src="tictactoe.js"></script>
     </head>
     <body>
+        <div>
+            <form novalidate>
+                <input type="text" value="your name" size="11" />
+                <input type="button" value="look for a match" />
+            </form>
+        <p>Your Opponent: &nbsp;</p>
+        </div>
         <tic-tac-toe />
     </body>
 </html>
