--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html ng-app="tic-tac-toe">
+<html>
     <head lang="en">
         <meta charset="utf-8">
         <title>tic-tac-toe</title>
         <script src="bower_components/angular/angular.min.js"></script>
         <script src="tictactoe.js"></script>
     </head>
-    <body>
+    <body ng-app="tic-tac-toe">
         <tic-tac-toe />
     </body>
 </html>
