beginning matchup modal

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <script src="tictactoe.js"></script>
     </head>
     <body ng-app="tic-tac-toe">
+        <div id="matchup" ng-show="true">
+            <em>waiting for opponent...</em>
+        </div>
         <tic-tac-toe />
     </body>
 </html>
