--- a/index.html
+++ b/index.html
@@ -5,6 +5,62 @@
         <title>tic-tac-toe</title>
         <script src="bower_components/angular/angular.min.js"></script>
         <script src="tictactoe.js"></script>
+        <style type="text/css">
+        #matchup
+        {
+            position: fixed;
+            font-family: Arial, Helvetica, sans-serif;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            background: rgba(0,0,0,0.8);
+            z-index: 99999;
+            opacity:0;
+            -webkit-transition: opacity 400ms ease-in;
+            -moz-transition: opacity 400ms ease-in;
+            transition: opacity 400ms ease-in;
+            pointer-events: none;
+            text-align: center;
+            color:#ffffff;
+        }
+        #matchup:target
+        {
+            opacity:1;
+            pointer-events: auto;
+        }
+        #matchup > div
+        {
+        	width: 400px;
+        	position: relative;
+        	margin: 10% auto;
+        	padding: 5px 20px 13px 20px;
+        	border-radius: 10px;
+        	background: #fff;
+        	background: -moz-linear-gradient(#fff, #999);
+        	background: -webkit-linear-gradient(#fff, #999);
+        	background: -o-linear-gradient(#fff, #999);
+        }
+        .close {
+        	background: #606061;
+        	color: #FFFFFF;
+        	line-height: 25px;
+        	position: absolute;
+        	right: -12px;
+        	text-align: center;
+        	top: -10px;
+        	width: 24px;
+        	text-decoration: none;
+        	font-weight: bold;
+        	-webkit-border-radius: 12px;
+        	-moz-border-radius: 12px;
+        	border-radius: 12px;
+        	-moz-box-shadow: 1px 1px 3px #000;
+        	-webkit-box-shadow: 1px 1px 3px #000;
+        	box-shadow: 1px 1px 3px #000;
+        }
+        .close:hover { background: #00d9ff; }
+        </style>
     </head>
     <body ng-app="tic-tac-toe">
         <div id="matchup" ng-show="true">
@@ -12,4 +68,4 @@
         </div>
         <tic-tac-toe />
     </body>
-</html>
+    </html>
