--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head lang="en">
         <meta charset="utf-8">
         <title>tic-tac-toe</title>
-        <script src="bower_components/angular/angular.js"></script>
-        <script src="bower_components/angular-fancy-modal/dist/angular-fancy-modal.js"></script>
+        <script src="bower_components/angular/angular.min.js"></script>
+        <script src="bower_components/angular-fancy-modal/dist/angular-fancy-modal.min.js"></script>
         <script src="tictactoe.js"></script>
-        <link rel="stylesheet" type="text/css" href="bower_components/angular-fancy-modal/dist/angular-fancy-modal.min.css">
+        <link rel="stylesheet" type="text/css"
+            href="bower_components/angular-fancy-modal/dist/angular-fancy-modal.min.css">
     </head>
     <body ng-app="tic-tac-toe" ng-controller="GameCtrl">
         <tic-tac-toe />
