--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <title>tic-tac-toe</title>
         <script src="bower_components/angular/angular.min.js"></script>
         <script src="bower_components/angular-fancy-modal/dist/angular-fancy-modal.min.js"></script>
+        <script src="bower_components/firebase/firebase.js"></script>
+        <script src="bower_components/angularfire/dist/angularfire.min.js"></script>
         <script src="tictactoe.js"></script>
         <link rel="stylesheet" type="text/css"
             href="bower_components/angular-fancy-modal/dist/angular-fancy-modal.min.css">
