--- a/modal.html
+++ b/modal.html
@@ -1,1 +1,4 @@
-<em style="text-align:center; display:block; float:center;">waiting for opponent...</em>
+<div style="text-align:center; display:block; float:center;">
+    <input type="text" placeholder="player name"><br>
+    <em>waiting for opponent...</em>
+</div>
