--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
         <script src="tictactoe.js"></script>
         <link rel="stylesheet" type="text/css"
             href="bower_components/angular-fancy-modal/dist/angular-fancy-modal.min.css">
+        <link rel="stylesheet" type="text/css"
+            href="index.css">
     </head>
     <body ng-app="tic-tac-toe" ng-controller="GameCtrl">
+        <h1 style="display:none;">tic-tac-toe</h1>
         <tic-tac-toe />
     </body>
 </html>
