separate files for controllers, providers

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <script src="bower_components/firebase/firebase.js"></script>
         <script src="bower_components/angularfire/dist/angularfire.min.js"></script>
         <script src="tictactoe.js"></script>
+        <script src="controllers.js"></script>
+        <script src="providers.js"></script>
         <link rel="stylesheet" type="text/css"
             href="bower_components/angular-fancy-modal/dist/angular-fancy-modal.min.css">
         <link rel="stylesheet" type="text/css"
