--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <script src="tictactoe.js"></script>
         <script src="controllers.js"></script>
         <script src="providers.js"></script>
+        <script src="services.js"></script>
         <link rel="stylesheet" type="text/css"
             href="bower_components/angular-fancy-modal/dist/angular-fancy-modal.min.css">
         <link rel="stylesheet" type="text/css"
