beginning of player management

--- a/modal.html
+++ b/modal.html
@@ -1,4 +1,4 @@
 <div style="text-align:center; display:block; float:center;">
-    <input type="text" placeholder="player name"><br>
+    <input type="text" placeholder="player name" ng-model="player.name"><br>
     <em>waiting for opponent...</em>
 </div>
