--- a/board.html
+++ b/board.html
@@ -2,27 +2,36 @@
     <link rel="stylesheet" style="text/css" href="tictactoe.css">
     <table>
         <tr>
-            <td ng-bind="coords[0]" ng-click="move(0)" ng-class="statusColor(0)" id="cell0">
+            <td ng-bind="coords[0]" ng-click="move(0); disableClick();"
+                ng-class="statusColor(0)" id="cell0">
                 &nbsp;</td>
-            <td ng-bind="coords[1]" ng-click="move(1)" ng-class="statusColor(1)" id="cell1">
+            <td ng-bind="coords[1]" ng-click="move(1); disableClick();"
+                ng-class="statusColor(1)" id="cell1">
                 &nbsp;</td>
-            <td ng-bind="coords[2]" ng-click="move(2)" ng-class="statusColor(2)" id="cell2">
-                &nbsp;</td>
-        </tr>
-        <tr>
-            <td ng-bind="coords[3]" ng-click="move(3)" ng-class="statusColor(3)" id="cell3">
-                &nbsp;</td>
-            <td ng-bind="coords[4]" ng-click="move(4)" ng-class="statusColor(4)" id="cell4">
-                &nbsp;</td>
-            <td ng-bind="coords[5]" ng-click="move(5)" ng-class="statusColor(5)" id="cell5">
+            <td ng-bind="coords[2]" ng-click="move(2); disableClick();"
+                ng-class="statusColor(2)" id="cell2">
                 &nbsp;</td>
         </tr>
         <tr>
-            <td ng-bind="coords[6]" ng-click="move(6)" ng-class="statusColor(6)" id="cell6">
+            <td ng-bind="coords[3]" ng-click="move(3); disableClick();"
+                ng-class="statusColor(3)" id="cell3">
                 &nbsp;</td>
-            <td ng-bind="coords[7]" ng-click="move(7)" ng-class="statusColor(7)" id="cell7">
+            <td ng-bind="coords[4]" ng-click="move(4); disableClick();"
+                ng-class="statusColor(4)" id="cell4">
                 &nbsp;</td>
-            <td ng-bind="coords[8]" ng-click="move(8)" ng-class="statusColor(8)" id="cell8">
+            <td ng-bind="coords[5]" ng-click="move(5); disableClick();"
+                ng-class="statusColor(5)" id="cell5">
+                &nbsp;</td>
+        </tr>
+        <tr>
+            <td ng-bind="coords[6]" ng-click="move(6); disableClick();"
+                ng-class="statusColor(6)" id="cell6">
+                &nbsp;</td>
+            <td ng-bind="coords[7]" ng-click="move(7); disableClick();"
+                ng-class="statusColor(7)" id="cell7">
+                &nbsp;</td>
+            <td ng-bind="coords[8]" ng-click="move(8); disableClick();"
+                ng-class="statusColor(8)" id="cell8">
                 &nbsp;</td>
         </tr>
     </table>
