--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <script src="bower_components/angularfire/dist/angularfire.min.js"></script>
         <script src="tictactoe.js"></script>
         <script src="controllers.js"></script>
-        <script src="providers.js"></script>
+        <script src="board.js"></script>
         <script src="services.js"></script>
         <link rel="stylesheet" type="text/css"
             href="bower_components/angular-fancy-modal/dist/angular-fancy-modal.min.css">
