--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head lang="en">
         <meta charset="utf-8">
         <title>tic-tac-toe</title>
-        <script src="bower_components/angular/angular.min.js"></script>
+        <script src="bower_components/angular/angular.js"></script>
         <script src="bower_components/angular-fancy-modal/dist/angular-fancy-modal.min.js"></script>
         <script src="bower_components/firebase/firebase.js"></script>
-        <script src="bower_components/angularfire/dist/angularfire.min.js"></script>
+        <script src="bower_components/angularfire/dist/angularfire.js"></script>
         <script src="tictactoe.js"></script>
         <script src="controllers.js"></script>
         <script src="board.js"></script>
